<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityhome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <include
            android:id="@+id/mtoolbar"
            layout="@layout/toolbar_app" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/rl_registraionstep1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/txtStep2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/edt_Email"
                style="@style/edtStyle"
                android:layout_width="0dp"
                android:layout_height="?android:actionBarSize"
                android:drawableLeft="@drawable/mailbox"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@drawable/ed_border_clear"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="@dimen/padding_12dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/margin_12dp"
                android:paddingLeft="@dimen/padding_16dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/edt_inputtextcolor"
                android:textColorHint="@color/btn_bordercolor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_Email" />


            <EditText
                android:id="@+id/edt_confirm"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:background="@drawable/ed_border_clear"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="@dimen/padding_12dp"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/margin_12dp"
                android:paddingLeft="@dimen/padding_16dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/edt_inputtextcolor"
                android:textColorHint="@color/btn_bordercolor"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />


            <EditText
                android:id="@+id/edt_mobile"
                style="@style/edtStyle"
                android:layout_width="0dp"
                android:layout_height="?android:actionBarSize"
                android:layout_marginTop="@dimen/margin_8dp"
                android:drawableLeft="@drawable/mobile"
                android:hint="@string/mobile1"
                android:imeOptions="actionDone"
                android:inputType="phone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm" />


            <RadioButton
                android:id="@+id/rb_condition"
                android:layout_width="wrap_content"
                android:layout_height="?android:actionBarSize"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />


            <TextView
                android:id="@+id/txt_condition"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:gravity="left|center_vertical"
                android:textColorLink="@color/linkColor"
                android:textSize="@dimen/txt_B_13"
                app:layout_constraintLeft_toRightOf="@+id/rb_condition"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_mobile" />




        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>


    <TextView
        android:id="@+id/txtStep2"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/ed_border_clear"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_T_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</android.support.constraint.ConstraintLayout>
